# GFEM_course_project1

./: .gitmodules  CMakeLists.txt  TO_FIX.txt  input copy 2.txt  input.txt  input_generated.txt  input_phier copy 2.txt  input_phier copy.txt  input_phier.txt  input_teste.txt  input_teste_copy.txt  main.cpp  main_debug.cpp  main_ex1.cpp
FEM_GFEM/: CMakeLists.txt  body_func.h  mesh.cpp  mesh.h  mesh_debug.cpp  shape_functions.h
FEM_GFEM/Boundeary_conditions/: Bondeary_conditions.h  CMakeLists.txt  body_func.h
FEM_GFEM/Elements/: CMakeLists.txt  bar.cpp  bars.cpp  bars.h  constrained_bar.cpp  constrained_bar.h  element.cpp  element.h  node.cpp  node.h
FEM_GFEM/Inputs/: CMakeLists.txt  read_input.cpp  read_input.h
FEM_GFEM/Integration_points/: CMakeLists.txt  integration_points.cpp  integration_points.h
FEM_GFEM/Post_processing/: CMakeLists.txt  plot_solution.cpp  plot_solution.h
FEM_GFEM/lib/: CMakeLists.txt
FEM_GFEM/lin_alg/: CMakeLists.txt  Matrix.cpp  Vector.cpp  lin_alg.cpp  lin_alg.h
FEM_GFEM/shape_functions/: CMakeLists.txt  Enrichment.cpp  Enrichment.h  shape_functions.cpp  shape_functions.h
generate_mesh/: CMakeLists.txt  create_input.cpp  create_input.h
input_files/: EX1_3_FEM_nel_16.txt  EX1_3_FEM_nel_2.txt  EX1_3_FEM_nel_32.txt  EX1_3_FEM_nel_4.txt  EX1_3_FEM_nel_8.txt  EX1_3_GFEM_nel_16.txt  EX1_3_GFEM_nel_2.txt  EX1_3_GFEM_nel_32.txt  EX1_3_GFEM_nel_4.txt  EX1_3_GFEM_nel_8.txt  EX1_4_FEM_pord_1.txt  EX1_4_FEM_pord_2.txt  EX1_4_FEM_pord_3.txt  EX1_4_FEM_pord_4.txt  EX1_4_FEM_pord_5.txt  EX1_4_FEM_pord_6.txt  EX1_4_GFEM_pord_1.txt  EX1_4_GFEM_pord_2.txt  EX1_4_GFEM_pord_3.txt  EX1_4_GFEM_pord_4.txt  EX1_4_GFEM_pord_5.txt  EX1_4_GFEM_pord_6.txt  EX1_5_FEM_nel_10.txt  EX1_5_FEM_nel_20.txt  EX1_5_FEM_nel_40.txt  EX1_5_FEM_nel_5.txt  EX1_5_GFEM_nel_10.txt  EX1_5_GFEM_nel_20.txt  EX1_5_GFEM_nel_40.txt  EX1_5_GFEM_nel_5.txt  EX1_6_FEM_pord_1.txt  EX1_6_FEM_pord_2.txt  EX1_6_FEM_pord_3.txt  EX1_6_FEM_pord_4.txt  EX1_6_FEM_pord_5.txt  EX1_6_FEM_pord_6.txt  EX1_6_GFEM_pord_1.txt  EX1_6_GFEM_pord_2.txt  EX1_6_GFEM_pord_3.txt  EX1_6_GFEM_pord_4.txt  (+165 more)
